# prediup

./: README.md  pyproject.toml
prediup/: cli.py
